--- a/readme
+++ b/readme
@@ -17,3 +17,7 @@
 
 "Bootstrapped_Result_Liver.csv"
 "Bootstrapped_Result_BAT.csv"
+
+################Operating System
+
+Code was written and tested in MacOS
